[gd_scene format=3 uid="uid://dhegpfv78p1ts"]

[ext_resource type="Script" uid="uid://b471xjqxqd03e" path="res://Screens/quest_giver.gd" id="1_script"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k6my7"]

[node name="QuestGiver" type="CharacterBody3D" unique_id=908359070]
collision_layer = 4
script = ExtResource("1_script")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1681141496]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_k6my7")

[node name="Visuals" type="Node3D" parent="." unique_id=1540496651]

[node name="NameLabel" type="Label3D" parent="." unique_id=1419982221]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.245215, 0)
billboard = 1
modulate = Color(1, 0.9, 0, 1)
text = "Quest Giver"
font_size = 64

[node name="QuestIndicator" type="Label3D" parent="." unique_id=1651075442]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.1807795, 0)
billboard = 1
modulate = Color(1, 1, 0, 1)
text = "!"
font_size = 256
outline_size = 32
